--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "PGDATABASE=nc_snacks jest",
-    "start": "nodemon",
+    "test": "jest",
+    "start": "nodemon listen.js",
     "setup-dbs": "psql -f db/setup.sql",
-    "seed": "PGDATABASE=nc_snacks node db/run-seed.js"
+    "seed-dev": "node db/seed-dev.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/nc-rose-mullan/nc_snacks#readme",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
