--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,4 +39,4 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Test app
-        run: PGDATABASE=test_db PGUSER=mr_testerson PGPASSWORD=pa55w0rd npm run test-app
+        run: PGDATABASE=test_db PGUSER=mr_testerson PGPASSWORD=pa55w0rd npm run test
